--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@angular/core": "^14.2.1",
     "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.2.1",
+    "@angular/localize": "^14.2.1",
     "@angular/material": "^14.2.1",
     "@angular/material-moment-adapter": "^14.2.1",
     "@angular/platform-browser": "^14.2.1",
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "ngx-logger": "^5.0.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
