--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "ngx-logger": "^5.0.7",
@@ -45,6 +46,7 @@
     "@angular-eslint/template-parser": "14.1.1",
     "@angular/cli": "^14.2.2",
     "@angular/compiler-cli": "^14.2.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
