--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^14.2.1",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "file-saver": "^2.0.5",
@@ -46,6 +47,7 @@
     "@angular-eslint/template-parser": "14.1.1",
     "@angular/cli": "^14.2.2",
     "@angular/compiler-cli": "^14.2.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
